# secret-guest

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  admin.py  alembic.ini  docker-compose.yml  load_data.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
frontend/: edit-profile.html  edit-profile.js  login.html  login.js  profile.html  profile.js  register.html  script.js  styles.css
src/: config.py  database.py  main.py
src/api/: analytics.py  auth.py  dependencies.py  hotels.py  minio.py  missions.py  reports.py  requests.py  statics.py
src/connectors/: minio.py
src/migrations/: env.py
src/migrations/versions/: 0be695a68370_upd_models.py  28fb7b6b7454_upd_models.py  30cf3c2fbe78_upd_models.py  538ccc8df13c_make_user_roles_id_auto_increment.py  71b266ed6218_upd_models.py  7a9b78abdb27_create_db_schema.py  b0c3abf11519_user_role_model_upd.py  b9489901e8b8_upd_models.py  fb7971b0ee4c_fix_roles_and_add_info_to_user.py
src/models/: __init__.py  hotels.py  missions.py  reports.py  users.py
src/repositories/: analytics.py  base.py  hotel.py  mission.py  report.py  user.py
src/schemas/: hotel.py  mission.py  report.py  user.py
src/services/: auth.py  base.py  minio.py
src/utils/: db_manager.py  verifications.py
tests/: test.py
